Issue password reset token (#1251)
* Remove CC of team on password resets.


* Use cache instead of DB lookup for username.


* Base commit for password reset functionality with token


* Add new property to application.properties


* Update to standardise the url in the config properties.


* Unit tests for password reset and token geeration


* Address PR comments removing unused endpoint and also return user to login page after successful password reset.


* Extract API types


---------
